--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@ body{
 
 #inhalt {
     background-color: white;
-    padding: 15px;
+    padding: 25px;
     float: left;
     margin-right: 200px;
     margin-left: 10 px;
@@ -89,4 +89,8 @@ td{
 a{
     color: white;
     text-decoration:none;
+}
+
+p{
+    font-family: 'Quicksand', sans-serif;
 }
