--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1{
     font-family: 'Quicksand', sans-serif;
 }
 
-#Themenfrage{
+.Themenfrage{
     margin-top: -5px;
     padding-left: 30px;
     font-size: 20px;
