--- a/style.css
+++ b/style.css
@@ -95,3 +95,13 @@ a{
 p{
     font-family: 'Quicksand', sans-serif;
 }
+
+.procon{
+    background-color: #f4f6f9;
+    border-radius: 50%;
+    height: 30px;
+    width: 30px;
+    font-size: 30px;
+    margin-left: auto;
+    margin-right: auto;
+}
