--- a/style.css
+++ b/style.css
@@ -110,8 +110,17 @@ p{
     font-family: 'Josefin Sans', sans-serif;
 }
 
+.procont{
+    margin-top: -10px;
+    text-align: center;
+    font-family: 'Amatic SC', cursive;
+    font-size: 40px;
+}
+
 .addargument{
     margin-top: 20px;
+    padding: 10px;
+    font-size: 15px;
 
 }
 
@@ -121,13 +130,28 @@ p{
 
 .proarg{
     float: left;
+    background-color: f4f6f9;
 }
 .conarg{
     float: right;
+     background-color: f4f6f9;
 }
 
 .conarg,.proarg{
     width: 40%;
-    margin: 20px;
+    margin: 10px;
     display: inline-block;
+    padding: 20px;
+}
+
+
+
+#ProNeu{
+    margin-left: auto;
+    margin-right: auto;
+}
+
+#ConNeu{
+    margin-left: auto;
+    margin-right: auto;
 }
