--- a/style.css
+++ b/style.css
@@ -132,28 +132,36 @@ p{
 
 .proarg{
     float: left;
-    background-color: f4f6f9;
+    background-color: #787A97;
 }
 .conarg{
     float: right;
-     background-color: f4f6f9;
+     background-color: #787A97;
 }
 
 .conarg,.proarg{
     width: 40%;
-    margin: 10px;
+    margin: 20px;
     display: inline-block;
     padding: 20px;
+    margin-left: 40px;
 }
 
 
 
 #ProNeu{
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
 }
 
 #ConNeu{
+    margin-top: 20px;
     margin-left: auto;
     margin-right: auto;
+}
+
+button{
+    margin:10px;
+    color: white;
 }
