--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body{
     margin-right: 200px;
     margin-left: 10px;
     margin-bottom: 20px;
-    width: 80%;
+    width: 75%;
 }
 
 h1{
@@ -114,9 +114,15 @@ p{
 
 .procont{
     margin-top: -10px;
+    margin-bottom: 30px;
     text-align: center;
     font-family: 'Amatic SC', cursive;
     font-size: 40px;
+    background-color: #f4f6f9;
+    border-radius: 50%;
+    width: 50%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .addargument{
@@ -133,18 +139,21 @@ p{
 .proarg{
     float: left;
     background-color: #787A97;
+    margin-right: -10px;
+    margin-left: 20px;
 }
 .conarg{
     float: right;
      background-color: #787A97;
+
 }
 
 .conarg,.proarg{
-    width: 40%;
-    margin: 20px;
+    width: 35%;
+    margin: 40px;
     display: inline-block;
-    padding: 20px;
-    margin-left: 40px;
+    padding: 25px;
+    border-radius: 5px;
 }
 
 
@@ -164,4 +173,11 @@ p{
 button{
     margin:10px;
     color: white;
+}
+
+#contentcon,#contentpro{
+    background-color: #f4f6f9;
+    margin: 5px;
+    padding: 5px;
+    border-radius 5px;
 }
