--- a/style.css
+++ b/style.css
@@ -101,16 +101,6 @@ p{
     color: white;
 }
 
-.procon{
-    background-color: #f4f6f9;
-    border-radius: 50%;
-    height: 30px;
-    width: 30px;
-    font-size: 30px;
-    margin-left: auto;
-    margin-right: auto;
-    font-family: 'Josefin Sans', sans-serif;
-}
 
 .procont{
     margin-top: -10px;
@@ -172,12 +162,18 @@ p{
 
 button{
     margin:10px;
+    background-color: #787A97;
     color: white;
 }
 
 #contentcon,#contentpro{
     background-color: #f4f6f9;
     margin: 5px;
-    padding: 5px;
-    border-radius 5px;
+    padding: 15px;
+    
+}
+
+a{
+    text-decoration: none;
+    color: black;
 }
