--- a/style.css
+++ b/style.css
@@ -153,8 +153,10 @@ p{
 
 button{
     margin:10px;
-    background-color: #787A97;
+    background-color: #39364A;
     color: white;
+    border:none;
+    padding:5px;
 }
 
 #contentcon,#contentpro{
@@ -167,6 +169,7 @@ button{
 a{
     text-decoration: none;
     color: black;
+    padding:5px;
 }
 
 #ProNeu,#ConNeu{
