--- a/style.css
+++ b/style.css
@@ -231,3 +231,8 @@ label{
 textarea{
     font-family: 'Quicksand', sans-serif;
 }
+#sendbutton{
+    padding:5px;
+    border:none;
+    background-color:  #39364A;
+}
